--- a/src/css/TodoBuscador.css
+++ b/src/css/TodoBuscador.css
@@ -22,3 +22,10 @@
 .TodoBuscador:focus {
     outline-color: #61DAFA;
 }
+
+.TodoBuscador:disabled {
+    /* background: #E0E0E0;
+    border-color: #A5A5A5;
+    color: #7A7A7A; */
+    opacity: 25%;
+}
